<resources>
    <string name="app_name">Minha Pressao Arterial</string>
    <string name="fab_content_desc">Adicionar novo registro</string>
    <string name="open">Aberto</string>
    <string name="close">Fechado</string>
    <string name="title">Minha Pressão Arterial</string>
    <string name="reports">Relatório</string>
    <string name="help">Ajuda</string>
    <string name="about">Sobre</string>
    <string name="my_blood_pressure">Minha Pressão Arterial</string>

    <!-- New register activity -->

    <string name="new_register_toolbar_title">Novo registro</string>
    <string name="type_all_fields_message">Por favor, preencher todos os campos corretamente!</string>
    <string name="bloodpressurehardware">Após aferir sua pressão sanguínea \nutilizando um esfigmomanômetro, entre \ncom os valores nos campos abaixo:</string>
    <string name="hintSistolica">Sistólica(mmHg)</string>
    <string name="hintDiastolica">Diastólica(mmHg)</string>
    <string name="hintPulso">Pulso(min)</string>
    <string name="titleFeeling">Como você esta se sentindo?</string>
    <string name="saveButton">Salvar</string>
    <string name="update">Atualizar</string>

    <!-- Itens do Spinner -->

    <string-array name="health_status">
        <item>Selecionar</item>
        <item>Nada bem</item>
        <item>Normal</item>
        <item>Muito bem</item>
    </string-array>

    <!-- Itens do Option menu -->

    <string name="Clear">Apagar tudo</string>

    <!-- Alert Dialog -->

    <string name="delete_entries">Remover registros</string>
    <string name="clear_confirmation_message">Isso removerá todos os registros, você tem certeza?</string>
    <string name="clear_yes_confirmation">Sim</string>
    <string name="cleared_entries_message">Registros removidos!</string>
    <string name="clear_no_confirmation">Não</string>
    <string name="not_cleared_entries_message">Cancelado</string>

    <!-- Alert Dialog -->

    <string name="new_update_toolbar_title">Atualizar registro</string>
    <string name="help_title">Ajuda</string>
    <string name="about_title">Sobre</string>
    <string name="hint_observations">Observações</string>


</resources>